--- a/FingCart-backend/api-gateway/src/main/resources/application-example.properties
+++ b/FingCart-backend/api-gateway/src/main/resources/application-example.properties
@@ -9,5 +9,9 @@ spring.cloud.gateway.server.webflux.routes[0].id=category-service
 spring.cloud.gateway.server.webflux.routes[0].uri=lb://CATEGORY-SERVICE
 spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/api/categories/**
 
+spring.cloud.gateway.server.webflux.routes[1].id=product-service
+spring.cloud.gateway.server.webflux.routes[1].uri=lb://PRODUCT-SERVICE
+spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/api/products/**
+
 eureka.instance.hostname=localhost
 eureka.instance.preferIpAddress=false
