--- a/FingCart-backend/product-service/src/main/resources/application-example.properties
+++ b/FingCart-backend/product-service/src/main/resources/application-example.properties
@@ -2,11 +2,10 @@ spring.application.name=product-service
 
 server.port=9002
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-spring.datasource.url=jdbc:mysql://localhost:3306/fingcart_product_db
-spring.datasource.username=root
+#PostgreSQL Configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/fingcart_product_db
+spring.datasource.username=postgres
 spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
@@ -14,14 +13,13 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
 
+#Eureka Client Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 eureka.instance.preferIpAddress=false
 
-# =========================
-# Actuator Configuration
-# =========================
 
+# Actuator Configuration
 # Expose actuator endpoints over HTTP
 management.endpoints.web.exposure.include=health,info
 
