--- a/FingCart-backend/product-service/src/main/resources/application-example.properties
+++ b/FingCart-backend/product-service/src/main/resources/application-example.properties
@@ -2,11 +2,10 @@ spring.application.name=product-service
 
 server.port=9002
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-spring.datasource.url=jdbc:mysql://localhost:3306/fingcart_product_db
-spring.datasource.username=root
+#PostgreSQL Configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/fingcart_product_db
+spring.datasource.username=postgres
 spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
