--- a/FingCart-backend/category-service/.gitignore
+++ b/FingCart-backend/category-service/.gitignore
@@ -39,6 +39,7 @@ application-*.properties
 application-*.yml
 application-*.yaml
 !application-example.properties
+!application-example.yml
 
 # Environment files
 .env
