--- a/FingCart-backend/category-service/src/main/resources/application-example.yml
+++ b/FingCart-backend/category-service/src/main/resources/application-example.yml
@@ -1,17 +1,36 @@
-server:
-  port: 9001
+#server:
+#  port: 9001
 
 spring:
   application:
     name: category-service
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/fingcart_category_db
+  config:
+    import: configserver:http://localhost:8888
+  profiles:
+    active: dev
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    hostname: localhost
-    preferIpAddress: false
+#    ***********************************************************************
+#    Moved all other configurations to config server
+#    ***********************************************************************
+
+
+#  data:
+#    mongodb:
+#      uri: mongodb://localhost:27017/fingcart_category_db
+#
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka/
+#  instance:
+#    hostname: localhost
+#    preferIpAddress: false
+#
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: refresh,health,info
+#  endpoint:
+#    health:
+#      show-details: always
