--- a/FingCart-backend/product-service/pom.xml
+++ b/FingCart-backend/product-service/pom.xml
@@ -86,6 +86,10 @@
             <groupId>org.mapstruct</groupId>
             <version>1.6.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
