--- a/FingCart-backend/docker-compose.yml
+++ b/FingCart-backend/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: postgres:15.14
     container_name: postgres_container
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER:-dockerpostgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-passit}
       PGDATA: /data/postgres
     volumes:
       - postgres:/data/postgres
@@ -19,8 +19,8 @@ services:
     image: dpage/pgadmin4
     container_name: pgadmin_container
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-pgadmin1@devlocal.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-admin}
       PGADMIN_CONFIG_SERVER_MODE: 'False'
     volumes:
       - pgadmin:/var/lib/pgadmin
