--- a/FingCart-backend/category-service/src/main/resources/application-example.properties
+++ b/FingCart-backend/category-service/src/main/resources/application-example.properties
@@ -1,24 +1,24 @@
-spring.application.name=category-service
-
-server.port=9001
-
-#Run multiple instances
-#server.port=0
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-spring.datasource.url=jdbc:mysql://localhost:3306/fingcart_category_db
-spring.datasource.username=root
-spring.datasource.password=
-
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.generate-ddl=true
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-
-eureka.instance.hostname=localhost
-eureka.instance.preferIpAddress=false
+#spring.application.name=category-service
+#
+#server.port=9001
+#
+##Run multiple instances
+##server.port=0
+#
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/fingcart_category_db
+#spring.datasource.username=root
+#spring.datasource.password=
+#
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.generate-ddl=true
+#
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#
+#eureka.instance.hostname=localhost
+#eureka.instance.preferIpAddress=false
