--- a/FingCart-backend/api-gateway/src/main/resources/application-example.yml
+++ b/FingCart-backend/api-gateway/src/main/resources/application-example.yml
@@ -31,10 +31,18 @@ spring:
               uri: lb://AUTH-SERVICE
               predicates:
                 - Path=/api/users/**
+
+            - id: cart-service
+              uri: lb://CART-SERVICE
+              predicates:
+                - Path=/api/carts/**
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+
   instance:
     preferIpAddress: false
     hostname: localhost
