--- a/FingCart-backend/api-gateway/src/main/resources/application-example.yml
+++ b/FingCart-backend/api-gateway/src/main/resources/application-example.yml
@@ -36,6 +36,21 @@ spring:
               uri: lb://CART-SERVICE
               predicates:
                 - Path=/api/carts/**
+
+            - id: order-service
+              uri: lb://ORDER-SERVICE
+              predicates:
+                - Path=/api/orders/**
+
+            - id: order-service-checkout
+              uri: lb://ORDER-SERVICE
+              predicates:
+                - Path=/api/checkout/**
+
+            - id: order-service-order
+              uri: lb://ORDER-SERVICE
+              predicates:
+                - Path=/api/orders/**
 eureka:
   client:
     service-url:
